--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@dcloudio/uni-ui": "^1.0.0",
     "flyio": "^0.6.2",
     "mescroll-uni": "^1.1.5",
+    "miniprogram-licia": "^1.5.8",
     "node-sass": "^4.12.0",
     "outils": "^1.5.0",
     "regenerator-runtime": "^0.12.1",
