--- a/.gitignore
+++ b/.gitignore
@@ -21,5 +21,6 @@ yarn-error.log*
 *.njsproj
 *.sln
 *.sw*
-/src/components-my/comment.vue
+/src/pages/comment/comment.vue
 /src/utils/request.js
+/src/pages/post/post.vue
